# tdmsreader

./: CMakeLists.txt  COPYING  Makefile  README  config.h.in
include/: Channel.h  DataArray.h  DataType.h  DataValue.h  MetaData.h  ObjectDefaults.h  TDMSData.h  TDMSReader.h
src/: CMakeLists.txt  Channel.cpp  Channel.h  DataArray.cpp  DataType.cpp  DataTypeFactory.cpp  DataValue.cpp  Error.cpp  Error.h  Group.cpp  Group.h  Int8Array.cpp  Int8Type.h  LeadIn.cpp  LeadIn.h  MetaData.cpp  MetaData.h  Object.cpp  Object.h  ObjectDefaults.cpp  ObjectDefaults.h  Root.cpp  Root.h  TDMSData.cpp  TDMSData.h  TDMSReader.cpp  TDMSReader.h  main.cpp  testTDMS.cpp
src/test/: CMakeLists.txt  Int8TypeTest.cpp
src/types/: Bool.cpp  Bool.h  BoolArray.cpp  BoolArray.h  BoolValue.cpp  BoolValue.h  CMakeLists.txt  DataArray.cpp  DataArray.h  DataType.cpp  DataType.h  DataTypeFactory.cpp  DataTypeFactory.h  DataValue.cpp  DataValue.h  Float128.cpp  Float128.h  Float128Array.cpp  Float128Array.h  Float128Value.cpp  Float128Value.h  Float32.cpp  Float32.h  Float32Array.cpp  Float32Array.h  Float32Value.cpp  Float32Value.h  Float64.cpp  Float64.h  Float64Array.cpp  Float64Array.h  Float64Value.cpp  Float64Value.h  Int16.cpp  Int16.h  Int16Array.cpp  Int16Array.h  Int16Value.cpp  Int16Value.h  Int32.cpp  (+48 more)
src/types/test/: CMakeLists.txt  Int8Test.cpp  Int8TypeTest.cpp
test/: CMakeLists.txt  Int8TypeTest.cpp  main.cpp
